--- a/src/components/common/side_menu/sideMenu.module.scss
+++ b/src/components/common/side_menu/sideMenu.module.scss
@@ -4,7 +4,7 @@
   background-color: $sideMenuBg;
   padding: $spacingLarge;
   border-radius: $radiousSm;
-  width: 30%;
+  height: max-content;
   h1 {
     margin-bottom: $spacingSmall;
   }
