--- a/src/components/layout/top_button/topButton.module.scss
+++ b/src/components/layout/top_button/topButton.module.scss
@@ -2,7 +2,7 @@
 .topButton {
   font-size: calc($fontMain + 4px);
   position: fixed;
-  inset: auto $fontMain $fontMain auto;
+  inset: auto $fontParagraph $fontParagraph auto;
   background-color: black;
   color: white;
   line-height: 0px;
