--- a/src/styles/_effects.scss
+++ b/src/styles/_effects.scss
@@ -3,11 +3,42 @@
 .card-hover {
   transition: $transitionDuration;
   &:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.144);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.11);
   }
 }
 // showing top button
 .show-elevator {
   opacity: 1 !important;
   visibility: visible !important;
+}
+// navbar shadow
+.nav-up {
+  box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.151);
+}
+// burger icon
+.open-burger {
+  & :nth-child(1) {
+    transform: rotateZ(-45deg);
+    transform-origin: right;
+  }
+  & :nth-child(2) {
+    transform: translateX(120%);
+    opacity: 0;
+  }
+  & :nth-child(3) {
+    transform: rotateZ(45deg);
+    transform-origin: right;
+  }
+}
+// navlist open
+.show-small-list {
+  opacity: 1;
+  ul {
+    transform: translateY(0px);
+  }
+}
+
+// nav active link
+.nav-link-active {
+  border-bottom: 1px solid rgb(0, 0, 0) !important;
 }
