--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,10 +7,10 @@ $sideMenuBg: #d9d9d9;
 $fontColor: #000000;
 
 //template fonts sizes
-$fontHero: clamp(1rem, 10vw, 1rem);
-$fontInput: clamp(0.54rem, 10vw, 0.54rem);
-$fontMain: clamp(0.5rem, 10vw, 0.5rem);
-$fontParagraph: clamp(0.375rem, 10vw, 0.375rem);
+$fontHero: clamp(0.6rem, 2.6vw, 1rem);
+$fontInput: clamp(0.4rem, 1.5vw, 0.54rem);
+$fontMain: clamp(0.4rem, 1.5vw, 0.5rem);
+$fontParagraph: clamp(0.33rem, 1vw, 0.375rem);
 
 // template transition duration
 $transitionDuration: 0.3s linear;
@@ -19,5 +19,14 @@ $transitionDuration: 0.3s linear;
 $spacingSmall: 12px;
 $spacingMedium: 16px;
 $spacingLarge: 24px;
+
 // Border radious
 $radiousSm: 5px;
+
+// Template responsive breakpoints
+$xs: 500px;
+$sm: 640px;
+$md: 768px;
+$lg: 1024px;
+$xl: 1280px;
+$xxl: 1536px;
