--- a/src/styles/_effects.scss
+++ b/src/styles/_effects.scss
@@ -42,3 +42,9 @@
 .nav-link-active {
   border-bottom: 1px solid rgb(0, 0, 0) !important;
 }
+
+// showing spinner
+.show-spinner {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
