--- a/src/components/layout/navbar/components/search_bar/searchBar.module.scss
+++ b/src/components/layout/navbar/components/search_bar/searchBar.module.scss
@@ -14,6 +14,7 @@
   width: 60%;
   gap: $spacingSmall;
   margin: auto;
+  position: relative;
   input {
     width: 92%;
     border: none;
@@ -34,7 +35,41 @@
     }
   }
 }
-
+// search menu
+.searchMenu {
+  position: absolute;
+  width: 100%;
+  inset: 105% 0px auto auto;
+  padding: $spacingMedium;
+  border-bottom-left-radius: $radiousSm;
+  border-bottom-right-radius: $radiousSm;
+  background-color: #ffffffd5;
+  backdrop-filter: blur(3px);
+  box-shadow: 0px 10px 14px 3px rgba(0, 0, 0, 0.11);
+  max-height: 30vh;
+  overflow-y: scroll;
+  button {
+    background-color: #000000;
+    border-radius: 3px;
+    color: $primaryColor;
+    position: absolute;
+    inset: 0px 0px auto auto;
+    width: min-content;
+    margin: 3px;
+    padding: 2px;
+    border: 10px;
+  }
+  li {
+    cursor: pointer;
+    margin-bottom: 8px;
+    p {
+      transition: $transitionDuration;
+      &:hover {
+        color: blue;
+      }
+    }
+  }
+}
 // responsive
 @media (max-width: $md) {
   .searchBar {
