--- a/src/components/layout/navbar/navbar.module.scss
+++ b/src/components/layout/navbar/navbar.module.scss
@@ -11,6 +11,7 @@
     padding-block: $spacingLarge;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     &:nth-child(2) {
       display: flex;
       align-items: center;
@@ -39,6 +40,7 @@
   width: 100%;
   overflow: hidden;
   opacity: 0;
+  visibility: hidden;
   transition: $transitionDuration;
   padding-bottom: $spacingMedium;
   ul {
